tests/rosetta/out/Kotlin/9-billion-names-of-god-the-integer.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/9-billion-names-of-god-the-integer.kt:21:9: error: val cannot be reassigned
        a = a.subList(0, n - 1)
        ^
/tmp/9-billion-names-of-god-the-integer.kt:40:13: error: type mismatch: inferred type is Double but Int was expected
        n = (n).toDouble() / (10).toDouble()
            ^
/tmp/9-billion-names-of-god-the-integer.kt:66:17: error: type mismatch: inferred type is Double but Int was expected
        carry = (s).toDouble() / (10).toDouble()
                ^
